# advent2020

./: Cargo.toml
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_parser.rs  day07_struct.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day16_parser.rs  day16_struct.rs
src/util/: error_handling.rs  input.rs  mod.rs
