[package]
name = "advent2020"
version = "0.1.0"
authors = ["william <wi.alhant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
anyhow = "*"
thiserror = "*"
nom = "*"

[[bin]]
name = "day04"
path = "src/days/day04.rs"

[[bin]]
name = "day05"
path = "src/days/day05.rs"

[[bin]]
name = "day06"
path = "src/days/day06.rs"

[[bin]]
name = "day07"
path = "src/days/day07.rs"

[[bin]]
name = "day08"
path = "src/days/day08.rs"

[[bin]]
name = "day09"
path = "src/days/day09.rs"