[package]
name = "advent2020"
version = "0.1.0"
authors = ["william <wi.alhant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
anyhow = "*"
thiserror = "*"
nom = "*"
nalgebra = "*"
modinverse = "*"

[[bin]]
name = "day13"
path = "src/days/day13.rs"